[gd_scene load_steps=3 format=2]

[ext_resource path="res://Teleporter.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="Teleporter" type="Area2D" groups=[
"interactable",
"teleporter",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimerMove" type="Timer" parent="."]
wait_time = 0.5

[node name="TimerCooldown" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Teleporter_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Teleporter_area_exited"]
[connection signal="timeout" from="TimerMove" to="." method="_on_TimerMove_timeout"]
